# FlareSolverr

./: .gitignore  .gitmodules  .pdm-python  Dockerfile  LICENSE  pyproject.toml
src/flaresolverr/: __init__.py  __main__.py  flaresolverr.py  flaresolverr_service.py  sessions.py  tests.py  tests_sites.py  utils.py
src/flaresolverr/DrissionPage/_base/: base.py  base.pyi
src/flaresolverr/DrissionPage/_elements/: chromium_element.py
src/flaresolverr/DrissionPage/_functions/: keys.py  locator.py  web.py
src/flaresolverr/DrissionPage/_pages/: chromium_base.py
src/flaresolverr/DrissionPage/_units/: downloader.py
src/flaresolverr/bottle_plugins/: prometheus_plugin.py
