[project]
name = "FlareSolverr"
version = "0.1.0"
description = "Proxy server to bypass Cloudflare protection"
authors = [
    {name = "Paul Pfeister", email = "code@pfeister.dev"},
]
dependencies = [
    "bottle==0.12.25",
    "waitress==2.1.2",
    "selenium==4.15.2",
    "func-timeout==4.3.5",
    "prometheus-client==0.17.1",
    "requests==2.32.0",
    "certifi==2024.07.04",
    "websockets==11.0.3",
    "xvfbwrapper==0.2.9; platform_system != \"Windows\"",
    "pefile==2023.2.7; platform_system == \"Windows\"",
    "setuptools>=71.1.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
